@@ -10,7 +10,10 @@ https://www.unboundid.com/resources/scim
   * Resolved Issues
 
     - Fixed issue where using PATCH to delete values of a multi-valued attribute
-      defined with an attribute mapping transformation may not always work.
+      defined with an attribute mapping transformation may not always work. LDAP
+      server must now support Permissive Modify Request Control in order to
+      conform to SCIM spec when adding existing values or deleting non-existent
+      values.
 
 ---------- SCIM 1.8.0 ----------
 
